Closed
Bug 587139
Opened 15 years ago
Closed 15 years ago
Attempting to load content in <browser remote> gives: "###!!! ASSERTION: Our view doesn't have a widget. Totally stuffed!: 'Error', file /home/cjones/mozilla/cedar/content/base/src/nsFrameLoader.cpp, line 771"
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| fennec | 2.0a1+ | --- |
People
(Reporter: cjones, Assigned: cjones)
References
Details
Attachments
(1 file)
|
884 bytes,
patch
|
smaug
:
review+
tnikkel
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Comment 1•15 years ago
|
||
Seems to be caused by bug 579621. This is not just breaking Fennec on the cedar repo. Since bug 579621 landed in m-c, Fennec is busted for realz.
| Assignee | ||
Comment 2•15 years ago
|
||
It's not only bug 579621; with that reversed, the awesome bar doesn't display and remote pages don't load.
| Assignee | ||
Comment 3•15 years ago
|
||
I had a mobile-browser patch applied that I didn't notice. Confirmed that bug 579621 is the problem.
| Assignee | ||
Comment 4•15 years ago
|
||
Assignee: nobody → jones.chris.g
Attachment #465812 -
Flags: review?(tnikkel)
Attachment #465812 -
Flags: review?(Olli.Pettay)
| Assignee | ||
Comment 5•15 years ago
|
||
This bug is "Blocker" priority, but requesting blocking-fennec for the sake of bean counters.
tracking-fennec: --- → ?
Updated•15 years ago
|
Attachment #465812 -
Flags: review?(Olli.Pettay) → review+
Updated•15 years ago
|
Attachment #465812 -
Flags: review?(tnikkel) → review+
Comment 6•15 years ago
|
||
http://hg.mozilla.org/projects/electrolysis/rev/58785707f4cd
merge over to m-c rsn
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
tracking-fennec: ? → 2.0a1+
You need to log in
before you can comment on or make changes to this bug.
Description
•