Bug 587139: <browser remote> still needs a widget until after fennec alpha1. r=smaug,tn